recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:13: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
    avance()
          ^Koch:17: error: not found: value snowside
    snowside(levels -1, length/3)
    ^Koch:19: error: not found: value snowside
    snowside(levels -1, length/3)
    ^Koch:21: error: not found: value snowside
    snowside(levels -1, length/3)
    ^